objects/SMAX_PS_Geography_Technician__c.object
<CustomObject>
    <description>Join table between the Geography and Technician</description>
    <label>Geography-Technician</label>
    <nameField>
        <label>Geography-Technician Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Geography-Technician</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>SMAX_PS_Rank__c</fullName>
        <label>Rank</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Location__c</fullName>
        <label>Location</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Geography__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Geography</label>
        <referenceTo>SMAX_PS_Geography__c</referenceTo>
        <relationshipLabel>Geography-Technician</relationshipLabel>
        <relationshipName>Geography_Technician</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Technician__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Technician/Equipment</label>
        <referenceTo>SVMXC__Service_Group_Members__c</referenceTo>
        <relationshipLabel>Geography-Technician</relationshipLabel>
        <relationshipName>Geography_Technician</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>